# QM-Method

./: .gitignore  CMakeLists.txt
.github/workflows/: cmake-multi-platform.yml
src/: Main.cpp
